[package]
name = "wgpu-rs-test"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main1"
path = "./src/main.rs"

[[bin]]
name = "main2"
path = "./src/main2.rs"

[dependencies]
image = "0.23"
winit = "0.25"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = "0.10"
pollster = "0.2"

